--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "author": "dokieki",
   "license": "ISC",
   "dependencies": {
-    "ws": "^8.3.0"
+    "@discordjs/opus": "^0.5.3",
+    "prism-media": "^1.3.2",
+    "sodium-native": "^3.3.0",
+    "ws": "^8.3.0",
+    "ytdl-core": "^4.9.2"
   }
 }
